@@ -20,10 +20,21 @@ Bugs that need to be fixed:
     !!!! When you spam two directions and are colliding with a wall, the wall moves. -> When you spam two opposite directions you have a chance to be perma stuck in said entity.
 }
 
-{ (IF YOU WANT TO ADD PEOPLE VS PEOPLE COLLISION)
+
+{   (MINOR BUG WITH PEOPLE VS PEOPLE COLLISION)
+    !! SOMETIMES LIKE 1/10 THE PEOPLE IGNORE 1-2 OTHER PEOPLE OBJECT COLLISIONS WHY? WHO KNOWS.
+
+}
+
+{ (IF YOU WANT TO ADD PEOPLE VS PEOPLE COLLISION) (FIXED)
     !!!!!!!!!!!!! SPAWN USING basicSpawnPeople(), I HAVE NO IDEA WHY THEY STILL INTERSECT. I CREATED AN INVISIBLE RECTANGLE, WHICH CHECKS COLLISION.
     IF IT IS TRUE AND IT COLLIDES WITH SOMETHING THEN IT DOESN'T SPAWN THE PEOPLE THERE AND TRIES AGAIN (ONLY TWICE).
     YET IT STILL SPAWNS IT ON TOP OF EACH OTHER?
+
+    THE PROBLEM WAS THAT YOU WERE LINKING UP THE SAME OBJECT ADDRESS TO ONE VARIABLE, THEREFORE IF YOU MOVE IT LIKE HOW YOU INTENDED IT TO MOVE,
+    IT MOVES ALL, ALL THE HITBOXES INTO THE NEW POSITION ITS CHECKING.
+
+    How it is fixed, is by CREATING A NEW RECTANGLE rather than saying x = entity.hitbox
 
 
 }
